[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/HTTP.gd" type="Script" id=1]
[ext_resource path="res://Scripts/pinTimer.gd" type="Script" id=2]

[node name="HTTPRequest" type="HTTPRequest"]
script = ExtResource( 1 )

[node name="pingTimer" type="Timer" parent="."]

[node name="invalidTimer" type="Timer" parent="."]

[node name="cooldownTimer" type="Timer" parent="."]

[node name="pinTimer" type="Timer" parent="."]
script = ExtResource( 2 )
